change link from oceanbase.com/doc to oceanbase.ai  (#109)
close #108

--- a/tools/systemd/profile/post_install.sh.template
+++ b/tools/systemd/profile/post_install.sh.template
@@ -12,4 +12,4 @@ NC="\033[0m"
 echo -e "${GREEN}To configure OceanBase${NC} : edit /etc/oceanbase/seekdb.cnf"
 echo -e "${GREEN}To start OceanBase${NC}     : systemctl start seekdb"
 echo -e "${GREEN}To enable OceanBase auto reboot ${NC} : systemctl enable seekdb"
-echo -e "${GREEN}To get more infomation${NC} : https://www.oceanbase.com/docs"
+echo -e "${GREEN}To get more infomation${NC} : https://www.oceanbase.ai/"
